# media-sharing-app

./: .env  .gitignore  Cargo.toml
migrations/2024-04-08-081808_users/: up.sql
migrations/2024-04-11-135424_email_address/: down.sql  up.sql
migrations/2024-04-11-204329_users/: up.sql
migrations/2024-04-15-103610_images/: down.sql  up.sql
migrations/2024-04-29-070328_videos/: up.sql
migrations/2024-07-29-073136_transactions/: down.sql  up.sql
rabbitmq/: Cargo.toml
rabbitmq/src/: cosumer.rs  lib.rs  producer.rs  rabbit.rs
src/: error.rs  lib.rs  main.rs  models.rs  password.rs  schema.rs  worker.rs
src/graphql_schema/: mod.rs
src/graphql_schema/images/: mod.rs
src/graphql_schema/images/mutation/: mod.rs  upload.rs
src/graphql_schema/images/query/: get.rs  mod.rs
src/graphql_schema/images/subscriptions/: mod.rs  new_image.rs
src/graphql_schema/payments/mutation/: mod.rs  mpesa.rs
src/graphql_schema/users/: mod.rs
src/graphql_schema/users/mutaion/: login.rs  mod.rs  signup.rs
src/graphql_schema/users/mutation/: login.rs  logout.rs  mod.rs  signup.rs  update.rs  verify_email.rs
src/graphql_schema/users/query/: get_user_id.rs  get_users.rs  mod.rs
src/graphql_schema/users/subscription/: mod.rs  new_user.rs
src/graphql_schema/videos/mutation/: mod.rs  videos.rs
src/mailer/: mod.rs
src/rabbitmq/: mod.rs  rabbit.rs  rabbit_connection.rs
src/services/: connnection.rs  image_processor.rs  mod.rs  pub_sub.rs  rabbitmq.rs
src/tests/: mod.rs  test_login.rs  test_media_upload.rs  test_signup.rs  test_verify_email.rs
templates/: base.html  dash.css  dashboard.html  index.js  login.html  login.js  logout.js  profile.css  profile.html  profile.js  scripts.js  style.css  verfy.js  verify_email.html  video.js
