[package]
name = "photos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
actix-cors = "0.7.0"
argon2 = "0.5"
async-graphql = { version = "7.0.0", features = ["uuid", "chrono"] }
async-graphql-actix-web = "7.0.0"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
diesel = { version = "2.1", features = ["postgres", "r2d2", "chrono", "uuid"] }
diesel-async = { version = "0.4", features = ["postgres", "deadpool"] }
diesel_migrations = "2.1"
dotenvy = "0.15"
env_logger = "0.11.0"
envy = "0.4"
uuid = { version = "1.4", features = ["v4", "serde"] }
validator = { version = "0.18.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = { version = "0.4", features = ["std", "serde"] }
lettre = "0.11.6"
reqwest = { version = "0.12.0", default-features = false, features = [
    "json",
    "rustls-tls",
    "multipart"
] }
image = "0.25.1"
mockall = "0.12.1"
actix-files = "0.6.5"
handlebars = {version ="5.1.2", features = ["dir_source"] }
tempfile = "3.0.0"

[dev-dependencies]
tokio = { version = "1.32", features = ["full"] }
tokio-postgres = { version = "0.7.10", features = ["runtime"] }
